--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -33,6 +33,9 @@ $dark-grey: #626262;
 $black: #000000;
 $purple: #5100ff;
 $green: #00b61d;
+$green-shadow: #01a01b;
+$error: #e40000;
+$error-shadow: #f90000;
 
 /*         Shadows       */
 
