--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ h6, .currency__menu, .section-r__title, .section-l__title, .content__copy__title
   text-transform: uppercase;
 }
 
-.cart__menu__product__price, .section-r__subtitle, .section-l__subtitle, .product__subtitle, .cart__product__price, .confirmation__subtitle {
+.cart__menu__product__price, .section-r__subtitle, .section-l__subtitle, .product__subtitle, .confirmation__subtitle {
   font-weight: 300;
   color: #5100ff;
 }
@@ -501,6 +501,7 @@ h1 {
 /*          _buttons.scss         */
 /*-------------------------------*/
 .nav-btn {
+  position: relative;
   font-size: 2rem;
   font-weight: bold;
   color: #626262;
@@ -514,6 +515,33 @@ h1 {
 
 .nav-btn:focus {
   outline: none;
+}
+
+.cta-btn {
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #5100ff;
+  width: 320px;
+}
+
+.cta-btn__link {
+  display: block;
+  color: #ffffff;
+  font-size: 1.1em;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  padding: 1em 0;
+  margin: 0 auto;
+}
+
+.cta-btn__link:hover {
+  color: #ffffff;
+}
+
+.cta-btn:hover {
+  background-color: #3900b3;
 }
 
 .cta-btn {
@@ -936,10 +964,21 @@ body::-webkit-scrollbar-thumb {
 
 .cart__menu {
   background-color: #e4e4e4;
+  overflow-y: auto;
 }
 
 .cart__menu__header {
   border-bottom: 2px solid #000000;
+}
+
+.cart__menu__empty {
+  font-weight: 400;
+  text-align: center;
+}
+
+.cart__menu__empty__img {
+  width: 100px;
+  margin: 4em auto;
 }
 
 .cart__menu__title {
@@ -961,7 +1000,6 @@ body::-webkit-scrollbar-thumb {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  border-bottom: 2px solid #000000;
   text-align: left;
 }
 
@@ -1025,6 +1063,18 @@ body::-webkit-scrollbar-thumb {
   padding: 1em 0em 0.6em 0;
 }
 
+.cart__menu__product__dropd__lens {
+  display: inline-block;
+  font-weight: bold;
+  font-size: 0.9em;
+  letter-spacing: 0.15em;
+  color: #000000;
+  text-transform: uppercase;
+  border-bottom: 2px solid #000000;
+  margin: 1.1em 0 0 0;
+  padding-bottom: 0.3em;
+}
+
 .cart__menu__product__total {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1039,11 +1089,17 @@ body::-webkit-scrollbar-thumb {
   margin-left: auto;
 }
 
+.cart__menu__product__btn {
+  width: 100%;
+  margin: 0;
+  margin-bottom: 10em;
+}
+
 @media (min-width: 768px) {
   .cart__menu__product__btn {
     width: 250px;
-    margin: 0;
     margin-left: auto;
+    margin-bottom: 0;
   }
 }
 
@@ -1054,6 +1110,18 @@ body::-webkit-scrollbar-thumb {
 .menu-hover:hover {
   font-family: "Oswald", sans-serif;
   color: #5100ff;
+}
+
+#articles-msg {
+  display: none;
+}
+
+#empty-cart {
+  display: block;
+}
+
+#cta-block {
+  display: none;
 }
 
 /*---------------------------------*/
@@ -1070,7 +1138,7 @@ body::-webkit-scrollbar-thumb {
           flex-direction: column;
   background-color: #f9f9f9;
   width: 100vw;
-  z-index: 5;
+  z-index: 10;
 }
 
 @media (min-width: 1024px) {
@@ -1124,6 +1192,25 @@ body::-webkit-scrollbar-thumb {
 
 .navbar__wrap__cart {
   background-color: #e4e4e4;
+}
+
+.navbar__wrap__cart__pilot {
+  display: none;
+  position: absolute;
+  top: 13px;
+  left: 18vw;
+  width: 14px;
+  height: 14px;
+  background-color: #5100ff;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 6px 0 #5100ff;
+          box-shadow: 0 0 6px 0 #5100ff;
+}
+
+@media (min-width: 1024px) {
+  .navbar__wrap__cart__pilot {
+    left: 8vw;
+  }
 }
 
 .navbar__icons {
@@ -1982,16 +2069,6 @@ body::-webkit-scrollbar-thumb {
   border-bottom: 2px solid #000000;
 }
 
-@media (min-width: 1155px) {
-  .cart__header {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    margin-bottom: 1em;
-  }
-}
-
 .cart__title {
   font-size: 1.8em;
   margin: 0;
@@ -2009,12 +2086,6 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-@media (min-width: 1155px) {
-  .cart__info {
-    margin: auto 0 0 auto;
-  }
-}
-
 .cart__product {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2025,83 +2096,6 @@ body::-webkit-scrollbar-thumb {
           flex-direction: column;
   border-bottom: 2px solid #000000;
   text-align: left;
-}
-
-.cart__product__del-btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding-left: 0;
-}
-
-.cart__product__wrapper-main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
-          flex-direction: row-reverse;
-}
-
-.cart__product__wrapper-info {
-  margin-right: auto;
-}
-
-.cart__product__img {
-  width: 32vw;
-  height: 110px;
-  margin-bottom: 2em;
-  background-image: url(http://localhost:3000/images/vcam_4.jpg);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-@media (min-width: 768px) {
-  .cart__product__img {
-    width: 32vw;
-    height: 122px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .cart__product__img {
-    width: 15vw;
-    height: 115px;
-    margin-bottom: 0;
-  }
-}
-
-@media (min-width: 1430px) {
-  .cart__product__img {
-    width: 215px;
-    height: 115px;
-  }
-}
-
-.cart__product__title {
-  font-size: 1.8em;
-}
-
-@media (min-width: 768px) {
-  .cart__product__title {
-    font-size: 2.1em;
-  }
-}
-
-.cart__product__price {
-  font-size: 1.4em;
-}
-
-@media (min-width: 768px) {
-  .cart__product__price {
-    font-size: 1.8em;
-  }
-}
-
-.cart__product__dropd {
-  margin: 0 0 2.2em 0;
 }
 
 .cart__product__promocode {
@@ -2187,6 +2181,18 @@ body::-webkit-scrollbar-thumb {
     margin: 0;
     margin-left: auto;
   }
+}
+
+.error {
+  border: 1px solid #e40000;
+  -webkit-box-shadow: 0px 0px 3px #f90000;
+          box-shadow: 0px 0px 3px #f90000;
+}
+
+.good {
+  border: 1px solid #00b61d;
+  -webkit-box-shadow: 0px 0px 3px #01a01b;
+          box-shadow: 0px 0px 3px #01a01b;
 }
 
 /*       address input boxes      */
