--- a/css/main.css
+++ b/css/main.css
@@ -2008,7 +2008,7 @@ body::-webkit-scrollbar-thumb {
     -ms-grid-columns: (1fr)[6];
         grid-template: repeat(4, 1fr)/repeat(6, 1fr);
     grid-gap: 0 8px;
-        grid-template-areas: "fn fn fn ln ln ln" "ad ad ad ad ad ad" "co co co co co co" "zc zc ty ty ry ry";
+        grid-template-areas: "ln ln ln fn fn fn" "ad ad ad ad ad ad" "co co co co co co" "zc zc ty ty ry ry";
   }
 }
 
@@ -2289,12 +2289,6 @@ body::-webkit-scrollbar-thumb {
   margin: 0;
 }
 
-@media (min-width: 1024px) {
-  .confirmation__title {
-    font-size: 2.8em;
-  }
-}
-
 .confirmation__icon {
   font-size: 4.5em;
   color: #00b61d;
@@ -2304,7 +2298,6 @@ body::-webkit-scrollbar-thumb {
 
 @media (min-width: 1024px) {
   .confirmation__icon {
-    font-size: 6em;
     margin: 3vh 0;
   }
 }
@@ -2314,12 +2307,6 @@ body::-webkit-scrollbar-thumb {
   text-align: center;
   margin-bottom: 1.2em;
   line-height: 1.3;
-}
-
-@media (min-width: 1024px) {
-  .confirmation__subtitle {
-    font-size: 2.1em;
-  }
 }
 
 .confirmation__message {
@@ -2340,6 +2327,7 @@ body::-webkit-scrollbar-thumb {
   color: #000000;
   text-transform: uppercase;
   border-bottom: 2px solid #000000;
+  text-align: center;
   margin: 0 auto 1em auto;
   padding-bottom: 0.3em;
 }
