--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 
 @import "./base/reset";
 @import "./base/fonts";
-@import "./base/animations";
+// @import "./base/animations";
 
 @import "./components/buttons";
 @import "./components/dropdown";
